fix(button): alignment of FAB + mini anchor btns
Closes #1607, #1690

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -5,8 +5,10 @@ $button-padding: 2px 6px 3px !default;
 $button-fab-width: 56px !default;
 $button-fab-height: 56px !default;
 $button-fab-padding: 16px !default;
+$button-fab-lineheight: 3 !default;
 $button-fab-mini-width: 40px !default;
 $button-fab-mini-height: 40px !default;
+$button-fab-mini-lineheight: 2 !default;
 
 $button-fab-toast-offset: $button-fab-height * 0.75;
 
@@ -24,6 +26,7 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
 }
 
 .md-button {
+  box-sizing: border-box;
   color: currentColor;
 
   user-select: none;
@@ -31,6 +34,7 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
 
   outline: none;
   border: 0;
+  display: inline-block;
   padding: 6px;
   margin: 0;
   background: transparent;
@@ -45,7 +49,6 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
   font-style: inherit;
   font-variant: inherit;
   font-family: inherit;
-  line-height: inherit;
   text-decoration: none;
 
   cursor: pointer;
@@ -94,6 +97,7 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
 
     z-index: $z-index-fab;
 
+    line-height: $button-fab-lineheight;
     width: $button-fab-width;
     height: $button-fab-height;
 
@@ -117,6 +121,7 @@ $button-fab-toast-offset: $button-fab-height * 0.75;
     }
 
     &.md-mini {
+      line-height: $button-fab-mini-lineheight;
       width: $button-fab-mini-width;
       height: $button-fab-mini-height;
     }
